# UrFU_robot

./: .env  .gitignore  app.py  debug_page_content.html  parser.py  pyproject.toml  requirements.txt
data/: irit_rtf_baccalaureate_info.docx  programs_data.json  ~$it_rtf_baccalaureate_info.docx
vectorstore/db_faiss_google/: index.faiss  index.pkl
